// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FacebookLogin initial render (connected) 1`] = `
<button class="v-facebook-login" style="transition: background-color 0.15s ease-in-out;">
  <span> Logout </span>
</button>
`;

exports[`FacebookLogin initial render (disabled) 1`] = `
<button class="v-facebook-login" disabled="disabled" style="transition: background-color 0.15s ease-in-out;">
  <svg class="logo" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
    <path d="M22.675 0h-21.35c-.732 0-1.325.593-1.325 1.325v21.351c0 .731.593 1.324 1.325 1.324h11.495v-9.294h-3.128v-3.622h3.128v-2.671c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.795.143v3.24l-1.918.001c-1.504 0-1.795.715-1.795 1.763v2.313h3.587l-.467 3.622h-3.12v9.293h6.116c.73 0 1.323-.593 1.323-1.325v-21.35c0-.732-.593-1.325-1.325-1.325z" />
  </svg>
  <span>Continue with Facebook </span>
</button>
`;

exports[`FacebookLogin initial render (disconnected) 1`] = `
<button class="v-facebook-login" style="transition: background-color 0.15s ease-in-out;">
  <svg class="logo" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
    <path d="M22.675 0h-21.35c-.732 0-1.325.593-1.325 1.325v21.351c0 .731.593 1.324 1.325 1.324h11.495v-9.294h-3.128v-3.622h3.128v-2.671c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.795.143v3.24l-1.918.001c-1.504 0-1.795.715-1.795 1.763v2.313h3.587l-.467 3.622h-3.12v9.293h6.116c.73 0 1.323-.593 1.323-1.325v-21.35c0-.732-.593-1.325-1.325-1.325z" />
  </svg>
  <span>Continue with Facebook </span>
</button>
`;

exports[`FacebookLogin logout scoped-slot 1`] = `
<button class="v-facebook-login" style="transition: background-color 0.15s ease-in-out;">
  <span>
    <div class="logout">{
      "idle": true,
      "error": null,
      "hasError": false,
      "working": false,
      "enabled": true,
      "disabled": false,
      "connected": true,
      "disconnected": false
      }</div>
  </span>
</button>
`;

exports[`FacebookLogin logout slot 1`] = `
<button class="v-facebook-login" style="transition: background-color 0.15s ease-in-out;">
  <span>
    <div class="logout"></div>
  </span>
</button>
`;

exports[`FacebookLogin scoped-slots 1`] = `
<button class="v-facebook-login" disabled="disabled" style="transition: background-color 0.15s ease-in-out;">
  <div class="before">{
    "idle": false,
    "error": {},
    "hasError": true,
    "working": false,
    "enabled": false,
    "disabled": true,
    "connected": false,
    "disconnected": true
    }</div>
  <span>
    <div class="error">{
      "idle": false,
      "error": {},
      "hasError": true,
      "working": false,
      "enabled": false,
      "disabled": true,
      "connected": false,
      "disconnected": true
      }</div>
  </span>
  <div class="after">{
    "idle": false,
    "error": {},
    "hasError": true,
    "working": false,
    "enabled": false,
    "disabled": true,
    "connected": false,
    "disconnected": true
    }</div>
</button>
`;

exports[`FacebookLogin slots 1`] = `
<button class="v-facebook-login" disabled="disabled" style="transition: background-color 0.15s ease-in-out;">
  <div class="before"></div>
  <span>
    <div class="error"></div>
  </span>
  <div class="after"></div>
</button>
`;
